# tinytimer

./: CMakeLists.txt  main.cpp  main_wayland.cpp  main_x11.cpp
